fix: working in case of cold state hard fork